@@ -6,6 +6,7 @@ Version 4.3.2
 - Fixed x[n].method() type calls in Spin2
 - Improved warnings about missing #
 - Made SEND pointer per-COG
+- Reduced the delay for SD card communication to speed up FatFs
 
 Version 4.3.1
 - Added HUBSET(), POLLATN(), WAITATN()
